--- a/Cuentas Ds/assets/style.css
+++ b/Cuentas Ds/assets/style.css
@@ -27,6 +27,7 @@ body {
     padding: 1em;
     border-radius: 5px;
     transition: .2s ease-in-out;
+    text-align: center;
 }
 
 .container__title h2 {
@@ -81,7 +82,13 @@ body {
 }
 
 .container__enlaces .sub {
-    background: rgb(255, 0, 0);
+    background-color: rgb(255, 0, 0);
+    font-weight: 600;
+}
+
+.container__enlaces .sorteo {
+    background-color: rgb(255, 47, 168);
+    color: rgb(255, 255, 255);
     font-weight: 600;
 }
 
@@ -113,5 +120,12 @@ body {
 
     .container__enlaces {
         width: 100%;
+        margin-bottom: 2em;
+    }
+
+    .container a {
+        padding: 10px;
+        display: flex;
+        align-items: center;
     }
 }
