--- a/Cuentas Ds/assets/style.css
+++ b/Cuentas Ds/assets/style.css
@@ -9,7 +9,8 @@
 }
 
 body {
-    background-color: rgb(224, 235, 74);
+    background-image: linear-gradient(rgb(251, 255, 0), rgb(234, 255, 253));
+    height: 100vh;
 }
 
 .container {
@@ -39,7 +40,7 @@ body {
 
 .container__items {
     display: flex;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(231, 223, 223);
     width: 90%;
     height: 400px;
     justify-content: center;
@@ -49,16 +50,32 @@ body {
 .container__counts {
     margin: 1em;
     border: 3px solid rgb(60, 255, 0);
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     padding: 2em;
     /* width: 70%; */
     text-align: center;
     position: relative;
     border-radius: 10px;
     box-shadow: 2px 1px 10px rgb(117, 117, 112);
+    animation: border 2s alternate infinite;
 }
 
+@keyframes border {
+    0% {
+        border: 3px solid rgb(0, 68, 255);
+    }
 
+    20% {
+        border: 3px solid rgb(255, 94, 0);
+    }
 
+    50% {
+        border: 3px solid rgb(255, 0, 221);
+    }
+}
+
+/* 
 .container__counts .container__number {
     font-size: 1em;
     border-radius: 50%;
@@ -69,6 +86,14 @@ body {
     position: absolute;
     top: 0;
     margin-bottom: 10px;
+} */
+
+.container__copy p {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .container__counts span {
@@ -80,6 +105,10 @@ body {
     display: flex;
     justify-content: space-around;
 }
+
+/* .container__enlaces a{
+    border-left: 2px solid #0000;
+} */
 
 .container__enlaces .sub {
     background-color: rgb(255, 0, 0);
@@ -96,9 +125,15 @@ body {
     transform: scale(1.1);
 }
 
+.container__copy .email {
+    display: flex;
+    flex-wrap: wrap;
+    font-weight: 300;
+}
+
 @media(max-width:768px) {
     body {
-        background-color: rgb(0, 204, 211);
+        background-image: linear-gradient(rgba(255, 136, 0, 0.568), rgb(0, 252, 231));
     }
 
     .container__items {
@@ -118,9 +153,13 @@ body {
         text-align: center;
     }
 
+    .container__counts {
+        width: 100%;
+    }
+
     .container__enlaces {
         width: 100%;
-        margin-bottom: 2em;
+        margin-bottom: 4px;
     }
 
     .container a {
@@ -128,4 +167,9 @@ body {
         display: flex;
         align-items: center;
     }
+
+    .container__enlaces {
+        width: 100%;
+    }
+
 }
